2009-10-13  Dimitri Glazkov  <dglazkov@chromium.org>

        No review, rolling out r49554, because it broke Win and Chromium builds.
        http://trac.webkit.org/changeset/49554

        * fast/css/large-number-round-trip-expected.txt:
        * fast/css/opacity-float-expected.txt:
        * fast/css/opacity-float.html:
        * platform/mac/fast/css/opacity-float-expected.txt: Added.
        * transforms/2d/compound-2d-transforms-expected.txt:
        * transforms/2d/compound-2d-transforms.html:

2009-10-13  Evan Martin  <evan@chromium.org>

        Reviewed by Adam Barth.

        Float formatting changes affect three tests:
        - large-number-round-trip now passes
        - opacity-float now passes and has more test cases
        - compound-2d-transforms output tweaked slightly
        
        https://bugs.webkit.org/show_bug.cgi?id=18994

        * fast/css/large-number-round-trip-expected.txt:
        * fast/css/opacity-float-expected.txt:
        * fast/css/opacity-float.html:
        * platform/mac/fast/css/opacity-float-expected.txt: Removed.
        * transforms/2d/compound-2d-transforms-expected.txt:
        * transforms/2d/compound-2d-transforms.html:

2009-10-13  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Holger Freyther.

        [LayoutTests][Gtk] Set a common Gtk theme as default and update the results
        https://bugs.webkit.org/show_bug.cgi?id=30223

        Update test results to reflect the usage of the default theme.

        * platform/gtk/editing/selection/iframe-expected.txt:
        * platform/gtk/editing/selection/select-box-expected.txt:

2009-10-13  Sam Weinig  <sam@webkit.org>

        Reviewed by David Hyatt.

        Test issue where clientX and clientY on MouseEvents were wrong when
        the page was zoomed and scrolled.

        * fast/events/clientXY-in-zoom-and-scroll-expected.txt: Added.
        * fast/events/clientXY-in-zoom-and-scroll.html: Added.

2009-10-13  Dmitry Titov  <dimich@chromium.org>
